--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Link your CSS stylesheet -->
+<link rel="stylesheet" href="index.css" />
     
 </head>
 <body>
@@ -23,7 +23,7 @@
 	</section>
     <section>
 		<img src="assets/campfire.png" alt="campfire" />
-		<p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park’s ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
+		<p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park's ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
 		<img src="assets/camper.png" alt="camper" />
 		<p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
 	</section>
