Styled the page with CSS

--- a/index.html
+++ b/index.html
@@ -6,29 +6,37 @@
     
 </head>
 <body>
-	<header>
-		<nav>
-			<a href="#">Plan your Visit</a>
-			<a href="#">Learn about the Park</a>
-			<a href="#">Get Involved</a>
-		</nav>
-		<img src="assets/header_img.jpg" alt="Yosemite National Park" />
-		<h1>Yosemite Park Guide</h1>
-		<p>Come explore California's beautiful wilderness.</p>
-		<p>Always open. Reservations are not available or required to enter the park.</p>
-	</header>
-    <section>
-		<p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
-		<p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
-	</section>
-    <section>
-		<img src="assets/campfire.png" alt="campfire" />
-		<p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park's ecosystems. This blog provides updates about fires in Yosemite. Check for current fire restrictions.</p>
-		<img src="assets/camper.png" alt="camper" />
-		<p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the park entrance fee upon arrival (there's no need to pay it in advance).</p>
-	</section>
+	<nav>
+		<a href="#">Plan your Visit</a>
+		<a href="#">Learn about the Park</a>
+		<a href="#">Get Involved</a>
+	</nav>
+	<div class="container">
+		<header>
+			<img src="assets/header_img.jpg" alt="Yosemite National Park" />
+			<div class="heading">
+				<h1>Yosemite Park Guide</h1>
+				<p>Come explore California's beautiful wilderness.</p>
+				<p>Always open. Reservations are not<br/>available or required to enter the<br/>park.</p>
+			</div>
+		</header>
+		<section class="main">
+			<p>Not just a great valley, but a shrine to human foresight, the strength of granite, the power of glaciers, the persistence of life, and the tranquility of the High Sierra.</p>
+			<p>First protected in 1864, Yosemite National Park is best known for its waterfalls, but within its nearly 1,200 square miles, you can find deep valleys, grand meadows, ancient giant sequoias, a vast wilderness area, and much more.</p>
+		</section>
+		<section class="main2">
+			<div>
+				<img src="assets/campfire.png" alt="campfire" />
+				<p>Fire is a natural and essential part of Yosemite. We manage fire carefully and study how it interacts with the park's ecosystems. This blog provides updates about fires in Yosemite. Check for <span class="bold">current fire restrictions</span>.</p>
+			</div>
+			<div>
+				<img src="assets/camper.png" alt="camper" />
+				<p>We strongly recommend that you make reservations for lodging, camping, and backpacking. You can pay the <span class="bold">park entrance fee</span> upon arrival (there's no need to pay it in advance).</p>
+			</div>
+		</section>
+	</div>
 	<footer>
-		<img src="assets/footer_img.jpg" alt="Yosemite National Park" />
+		<div class="footer-img"><img src="assets/footer_img.jpg" alt="Yosemite National Park" /></div>
 		<nav>
 			<a href="#">Plan your Visit</a>
 			<a href="#">Learn about the Park</a>
